k8s/admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: shopnow
  labels:
    app: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          image: 975050024946.dkr.ecr.eu-west-2.amazonaws.com/shopnow-admin:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: shopnow
  labels:
    app: admin
spec:
  selector:
    app: admin
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
